Added 'response_type' field to ChatCompletionsRequest, added Assistant message type